--- a/UI/Properties/launchSettings.json
+++ b/UI/Properties/launchSettings.json
@@ -23,7 +23,8 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:7139;http://localhost:5251",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://*:7139;http://*:5251"
       }
     },
     "IIS Express": {
